# llmchan

./: .gitignore  README.md  chat.py  llmchan.tcss  pyproject.toml  ui.py
.github/workflows/: python-package.yml
data/: strategies.json  users.json
llmchan/: chat.py  llmchan.tcss  localization.py  ui.py
llmchan/data/: strategies.json  users.json
tests/: __init__.py  test_chat.py  test_localization.py
