[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmchat"
version = "0.1.0"
description = "Let LLM agents discuss with each other"
authors = [{ name = "Yamato Matsuoka", email = "yamato.matsuoka@tritonlab.io" }]
license = "MIT"
readme = "README.md"
keywords = ["pydantic", "openai", "dotenv"]
classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = ["pydantic", "openai", "python-dotenv", "anthropic"]
optional-dependencies.dev = ["pytest", "mypy", "pylint", "black"]

[project.urls]
repository = "https://github.com/yamaton/llmchat"
